# SDL2-Shapes

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  main.cpp
src/Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
src/Shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Star2D.cpp  Star2D.h  Triangle.cpp  Triangle.h
src/Utils/: Utils.cpp  Utils.h  Vec2D.cpp  Vec2D.h
